# recurrent-structure-study

./: .gitignore  README.md  pyproject.toml
src/: data.py  gru.py  mouse_listener.py
