[project]
name = "recurrent-structure-study"
version = "0.0.1"
requires-python = ">=3.13"
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = ["torch", "pynput", "pandas", "scikit-learn"]

[project.optional-dependencies]
dev = ["black"]

[project-scripts] # formatting, linting, testing, etc